added grid generation button

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>Etch-a-Sketch</title>
 </head>
 <body>
-
+    <input type="grid-size" placeholder="Grid size">
+    <button>Enter</button>
+    
     <script src="main.js"></script>
 </body>
 </html>
