added grid size slider

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>Etch-a-Sketch</title>
 </head>
 <body>
-    <input type="grid-size" placeholder="Grid size">
+    <div class="grid-size-slider">
+        <input type="range" min="1" max="64" value="16" class="slider">
+      </div>
     <button>Enter</button>
     
     <script src="main.js"></script>
