--- a/index.html
+++ b/index.html
@@ -8,10 +8,18 @@
     <title>Etch-a-Sketch</title>
 </head>
 <body>
+    <div class="color-picker">
+        <label for="colorpicker">Color Picker: </label>
+        <input type="color" id="colorpicker" value="#0000ff">
+        <button id="pick-color">pick</button>
+    </div>
+    <button id="black-color">Black</button>
     <div class="grid-size-slider">
+        <div id="size-label"></div>
         <input type="range" min="1" max="64" value="16" class="slider">
-      </div>
-    <button>Enter</button>
+    </div>
+    <button id="clear">Clear</button>
+    <button id="delete">Delete</button>
     
     <script src="main.js"></script>
 </body>
