--- a/index.html
+++ b/index.html
@@ -8,19 +8,30 @@
     <title>Etch-a-Sketch</title>
 </head>
 <body>
-    <div class="color-picker">
-        <label for="colorpicker">Color Picker: </label>
-        <input type="color" id="colorpicker" value="#0000ff">
-        <button id="pick-color">pick</button>
-    </div>
-    <button id="black-color">Black</button>
-    <div class="grid-size-slider">
-        <div id="size-label"></div>
-        <input type="range" min="1" max="64" value="16" class="slider">
-    </div>
-    <button id="clear">Clear</button>
-    <button id="delete">Delete</button>
+    <!-- <h1 class="header">Etch-a Sketch</h1> -->
+    <header>Etch-a Sketch</header>
+    <div class="sidebar">
+        <div class="grid-size-slider">Resolution:
+            <div id="size-label"></div>
+            <span>
+                <input type="range" min="1" max="64" value="16" class="slider">
+            </span>
+        </div>
+
+        <div class="color-picker">
+            <label for="colorpicker"></label>
+            <input type="color" id="colorpicker" value="#0000ff">
+            <button id="pick-color">Choose Color</button>
+        </div>
     
+        <button id="black-color">Black</button>
+
+        <button id="clear">Clear</button>
+    
+        <button id="delete">Delete</button>
+    </div>
+    <footer>Ali Can Yelekci 2022</footer>
+
     <script src="main.js"></script>
 </body>
 </html>
